# timewatcher

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yaml
timewatcher/: __init__.py  app.py  configs.py  consts.py  data.py  timewatcher.py
